# lomatching

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: actions.yaml
lomatching/: __init__.py  decoder.py  util.py
profile/: benchmark_BeliefMoMatching.py  get_encoded_circuit.py  profile.sh
somatching/: __init__.py  decoder.py  decoder_bp.py  util.py
split_mwpm/: __init__.py  clifford_circuit_sampler.py  decoder.py  decoder_bp.py  greedy_algorithm.py  util.py
tests/: test_README.py  test_clifford_circuit_sampler.py  test_decoder.py  test_greedy_algorithm.py  test_tests.py  test_util.py
