[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "split-mwpm"
description = "Decoder for the transversal logical S gate in surface codes based on MWPM." 
version = "0.1.0"
authors = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" }
]
maintainers = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" }
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "numpy",
    "stim",
    "pymatching",
    "qec-util",
]
keywords = ["MWPM", "QEC", "quantum error correction", "logical-gates", "decoder"]

[tool.setuptools.packages.find]
include = ["split_mwpm", "split_mwpm.*"]  # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "black", "pytest-black"]
